# frechetForCurves

./: MANIFEST  MANIFEST.in  README.md  documentation.html  example.py  setup.cfg  setup.py
docs/: config_doxygen
docs/html/: annotated.html  classes.html  classpyfrechet_1_1distance_1_1_distance.html  classpyfrechet_1_1distance_1_1_strong_distance.html  classpyfrechet_1_1distance_1_1_weak_distance.html  classpyfrechet_1_1optimise_1_1_binary_search.html  classpyfrechet_1_1visualize_1_1_free_space_diagram.html  dir_d4978cea0b1e902a20f6be36a93754e1.html  distance_8c.html  distance_8h.html  distance_8h_source.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  hierarchy.html  index.html  menudata.js  namespacepyfrechet.html  namespaces.html  strong__distance_8c.html  strong__distance_8h.html  struct_d_f_s.html  (+7 more)
pyfrechet/: __init__.py  build.py  distance.py  strong_distance.c  visualize.py
src/: __init__.py  build.py  distance.py
test/: free_space.c  plot_data.py  pyfrechet_distance.py  pyfrechet_optimise.py  pyfrechet_visualize.py  strong_distance.c  strong_weak_distance.py  test_curve_1.txt  test_curve_2.txt  test_curve_21.txt  test_curve_22.txt  test_curves_graph.py  test_free_space  test_free_space.c  test_free_space.py  test_pyfrechet_distance.py  test_pyfrechet_optimise.py  test_pyfrechet_visualize.py  test_rewirte_stock_data.py  test_strong_and_weak_distance.py  test_strong_distance  test_strong_distance.c  test_weak_distance  test_weak_distance.c  weak_distance.c
(+185 files in other folders)
