[metadata]
name = pyfrechet
version = 0.1
author = Will Rodman
author_email = wrodman@tulane.edu
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/compgeomTU/frechetForCurves
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
